I add docker and docker-compose files. Project is ready.

--- a/src/main/webapp/html/tasks.html
+++ b/src/main/webapp/html/tasks.html
@@ -35,6 +35,7 @@
     <tr>
         <td>-</td>
         <td>
+            <label for='description_new'></label>
             <input id='description_new' type='text' value=''>
         </td>
         <td>
